--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "description": "Backend Database API for PomoFlash",
   "scripts": {
-    "dev":"node app.js"
+    "dev": "node app.js"
   },
   "main": "app.js",
   "repository": "git@github.com:dylanvaneaton/PomoFlash-2025-RevUC-Backend.git",
   "author": "dylanvaneaton",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "pg-promise": "^11.10.2"
   }
 }
