--- a/compose.yaml
+++ b/compose.yaml
@@ -22,6 +22,7 @@ services:
       - "127.0.0.1:5432:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
+      - ./initdb.sql:/initdb.sql
 
 volumes:
   postgres-data:
