--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "dylanvaneaton",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "pg-promise": "^11.10.2"
   }
