--- a/compose.yaml
+++ b/compose.yaml
@@ -12,6 +12,7 @@ services:
       EXPRESS_PORT: 59632
     depends_on:
       - database
+    networks: webnet
   database:
     image: postgres
     environment:
@@ -23,6 +24,23 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data
       - ./initdb.sql:/initdb.sql
+    networks:
+      - webnet
+  nginx:
+    image: nginx:latest
+    container_name: nginx_proxy
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./.certificates:/etc/nginx/certs:ro # Mount your cert files into the container
+    depends_on:
+      - backend
+    networks:
+      - webnet
 
+networks:
+  webnet:
 volumes:
   postgres-data:
