PLEASE JUST PLEASE

--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,14 @@ http {
     keepalive_timeout 65;
 
 
+server {
+    listen 80;
+    server_name dylanvaneaton.com;
 
+    location / {
+        return 301 https://$host$request_uri; # Redirect HTTP to HTTPS
+    }
+}
 
     # Reverse Proxy with HTTPS (requires SSL certificates)
     server {
@@ -22,7 +29,7 @@ http {
         ssl_certificate_key /etc/nginx/certs/privkey.pem;
 
         location / {
-        proxy_pass http://localhost:59632; # Forward to your Express app
+        proxy_pass http://backend:59632; # Forward to your Express app
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
